--- a/css/blog.css
+++ b/css/blog.css
@@ -411,6 +411,12 @@
     text-decoration-color: var(--primary);
 }
 
+.article-content a:focus-visible {
+    outline: 2px solid rgba(var(--primary-rgb), 0.45);
+    outline-offset: 2px;
+    text-decoration-color: var(--primary);
+}
+
 /* Strong & Emphasis */
 .article-content strong {
     color: var(--text);
