--- a/css/blog.css
+++ b/css/blog.css
@@ -2107,6 +2107,12 @@
     box-shadow: 0 2px 8px rgba(59, 130, 246, 0.1);
 }
 
+.search-chip:focus-visible {
+    outline: 2px solid rgba(var(--primary-rgb), 0.45);
+    outline-offset: 2px;
+    border-color: rgba(var(--primary-rgb), 0.4);
+}
+
 .search-icon {
     display: none;
 }
